USL/ANTLR/.antlr/USLParser.java
// Generated from c:/Users/leo08/source/repos/USL/USL/ANTLR/USL.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class USLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, CLASS=3, NAMESPACE=4, INBUILD_TYPE=5, TEMPLATE=6, ASYNC=7, 
		SYNC=8, INTERNAL=9, NULL=10, CUSTOM_KEYWORD=11, CUSTOM_FLOW_CONTROL=12, 
		CUSTOM_OPERATOR=13, ASSIGN=14, PLUS=15, MINUS=16, MULT=17, DIV=18, MOD=19, 
		HASH=20, DEREF=21, INCREMENT=22, DECREMENT=23, B_LEFT=24, B_RIGHT=25, 
		EQUALS=26, LESS=27, LARGER=28, NOT=29, LESS_EQ=30, LARGER_EQ=31, COMMA=32, 
		DOT=33, SEMI=34, LC=35, RC=36, LA=37, RA=38, ATRIBUTE=39, INT=40, FLOAT=41, 
		CHAR=42, STRING=43, BOOL=44, COMMENT=45, WS=46, ID=47, TEMPLATE_PARAM=48;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_customKeyDeclaration = 2, RULE_customOperatorDeclaration = 3, 
		RULE_customControlFlowDeclaration = 4, RULE_namespaceDeclaration = 5, 
		RULE_classDeclaration = 6, RULE_classMember = 7, RULE_functionDeclaration = 8, 
		RULE_functionDeclarationWithAtr = 9, RULE_varDeclaration = 10, RULE_varDeclarationWithAtr = 11, 
		RULE_memberAcces = 12, RULE_funcCall = 13, RULE_parameterList = 14, RULE_parameter = 15, 
		RULE_assignment = 16, RULE_templateDeclaration = 17, RULE_typeSpecifier = 18, 
		RULE_expression = 19, RULE_primary = 20, RULE_expressionStatement = 21, 
		RULE_attribute = 22, RULE_attributeParameterList = 23, RULE_attributeParameter = 24, 
		RULE_genericParameterList = 25, RULE_block = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "customKeyDeclaration", "customOperatorDeclaration", 
			"customControlFlowDeclaration", "namespaceDeclaration", "classDeclaration", 
			"classMember", "functionDeclaration", "functionDeclarationWithAtr", "varDeclaration", 
			"varDeclarationWithAtr", "memberAcces", "funcCall", "parameterList", 
			"parameter", "assignment", "templateDeclaration", "typeSpecifier", "expression", 
			"primary", "expressionStatement", "attribute", "attributeParameterList", 
			"attributeParameter", "genericParameterList", "block"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'class'", "'namespace'", null, "'template'", "'async'", 
			"'sync'", "'_internal'", "'null'", "'keyword(DEF)'", "'control_F(DEF)'", 
			"'operator(DEF)'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'#'", "'->'", 
			"'++'", "'--'", "'<<'", "'>>'", "'=='", "'<'", "'>'", "'!'", null, null, 
			"','", "'.'", "';'", "'{'", "'}'", "'['", "']'", "'GENERIC'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "CLASS", "NAMESPACE", "INBUILD_TYPE", "TEMPLATE", "ASYNC", 
			"SYNC", "INTERNAL", "NULL", "CUSTOM_KEYWORD", "CUSTOM_FLOW_CONTROL", 
			"CUSTOM_OPERATOR", "ASSIGN", "PLUS", "MINUS", "MULT", "DIV", "MOD", "HASH", 
			"DEREF", "INCREMENT", "DECREMENT", "B_LEFT", "B_RIGHT", "EQUALS", "LESS", 
			"LARGER", "NOT", "LESS_EQ", "LARGER_EQ", "COMMA", "DOT", "SEMI", "LC", 
			"RC", "LA", "RA", "ATRIBUTE", "INT", "FLOAT", "CHAR", "STRING", "BOOL", 
			"COMMENT", "WS", "ID", "TEMPLATE_PARAM"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "USL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public USLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(USLParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(54);
				statement();
				}
				}
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 174994147514874L) != 0) );
			setState(59);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public CustomControlFlowDeclarationContext customControlFlowDeclaration() {
			return getRuleContext(CustomControlFlowDeclarationContext.class,0);
		}
		public CustomOperatorDeclarationContext customOperatorDeclaration() {
			return getRuleContext(CustomOperatorDeclarationContext.class,0);
		}
		public CustomKeyDeclarationContext customKeyDeclaration() {
			return getRuleContext(CustomKeyDeclarationContext.class,0);
		}
		public NamespaceDeclarationContext namespaceDeclaration() {
			return getRuleContext(NamespaceDeclarationContext.class,0);
		}
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public FunctionDeclarationWithAtrContext functionDeclarationWithAtr() {
			return getRuleContext(FunctionDeclarationWithAtrContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public VarDeclarationWithAtrContext varDeclarationWithAtr() {
			return getRuleContext(VarDeclarationWithAtrContext.class,0);
		}
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FuncCallContext funcCall() {
			return getRuleContext(FuncCallContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				customControlFlowDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				customOperatorDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(63);
				customKeyDeclaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(64);
				namespaceDeclaration();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(65);
				classDeclaration();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(66);
				functionDeclarationWithAtr();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(67);
				functionDeclaration();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(68);
				varDeclarationWithAtr();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(69);
				varDeclaration();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(70);
				assignment();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(71);
				expressionStatement();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(72);
				block();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(73);
				funcCall();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CustomKeyDeclarationContext extends ParserRuleContext {
		public TerminalNode CUSTOM_KEYWORD() { return getToken(USLParser.CUSTOM_KEYWORD, 0); }
		public TerminalNode ID() { return getToken(USLParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public CustomKeyDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_customKeyDeclaration; }
	}

	public final CustomKeyDeclarationContext customKeyDeclaration() throws RecognitionException {
		CustomKeyDeclarationContext _localctx = new CustomKeyDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_customKeyDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(CUSTOM_KEYWORD);
			setState(77);
			match(ID);
			setState(78);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CustomOperatorDeclarationContext extends ParserRuleContext {
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public TerminalNode CUSTOM_OPERATOR() { return getToken(USLParser.CUSTOM_OPERATOR, 0); }
		public TerminalNode ID() { return getToken(USLParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public CustomOperatorDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_customOperatorDeclaration; }
	}

	public final CustomOperatorDeclarationContext customOperatorDeclaration() throws RecognitionException {
		CustomOperatorDeclarationContext _localctx = new CustomOperatorDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_customOperatorDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			typeSpecifier();
			setState(81);
			match(CUSTOM_OPERATOR);
			setState(82);
			match(ID);
			setState(83);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CustomControlFlowDeclarationContext extends ParserRuleContext {
		public TerminalNode CUSTOM_FLOW_CONTROL() { return getToken(USLParser.CUSTOM_FLOW_CONTROL, 0); }
		public TerminalNode ID() { return getToken(USLParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public CustomControlFlowDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_customControlFlowDeclaration; }
	}

	public final CustomControlFlowDeclarationContext customControlFlowDeclaration() throws RecognitionException {
		CustomControlFlowDeclarationContext _localctx = new CustomControlFlowDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_customControlFlowDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(CUSTOM_FLOW_CONTROL);
			setState(86);
			match(ID);
			setState(87);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NamespaceDeclarationContext extends ParserRuleContext {
		public TerminalNode NAMESPACE() { return getToken(USLParser.NAMESPACE, 0); }
		public TerminalNode ID() { return getToken(USLParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public NamespaceDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespaceDeclaration; }
	}

	public final NamespaceDeclarationContext namespaceDeclaration() throws RecognitionException {
		NamespaceDeclarationContext _localctx = new NamespaceDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_namespaceDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(NAMESPACE);
			setState(90);
			match(ID);
			setState(91);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassDeclarationContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(USLParser.CLASS, 0); }
		public TerminalNode ID() { return getToken(USLParser.ID, 0); }
		public TerminalNode LC() { return getToken(USLParser.LC, 0); }
		public TerminalNode RC() { return getToken(USLParser.RC, 0); }
		public TemplateDeclarationContext templateDeclaration() {
			return getRuleContext(TemplateDeclarationContext.class,0);
		}
		public List<ClassMemberContext> classMember() {
			return getRuleContexts(ClassMemberContext.class);
		}
		public ClassMemberContext classMember(int i) {
			return getRuleContext(ClassMemberContext.class,i);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_classDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TEMPLATE) {
				{
				setState(93);
				templateDeclaration();
				}
			}

			setState(96);
			match(CLASS);
			setState(97);
			match(ID);
			setState(98);
			match(LC);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 140874927309280L) != 0)) {
				{
				{
				setState(99);
				classMember();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			match(RC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassMemberContext extends ParserRuleContext {
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public ClassMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classMember; }
	}

	public final ClassMemberContext classMember() throws RecognitionException {
		ClassMemberContext _localctx = new ClassMemberContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_classMember);
		try {
			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				varDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				functionDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclarationContext extends ParserRuleContext {
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public TerminalNode ID() { return getToken(USLParser.ID, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode ASYNC() { return getToken(USLParser.ASYNC, 0); }
		public TerminalNode SYNC() { return getToken(USLParser.SYNC, 0); }
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASYNC || _la==SYNC) {
				{
				setState(111);
				_la = _input.LA(1);
				if ( !(_la==ASYNC || _la==SYNC) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(114);
			typeSpecifier();
			setState(115);
			match(ID);
			setState(116);
			match(T__0);
			setState(117);
			parameterList();
			setState(118);
			match(T__1);
			setState(119);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclarationWithAtrContext extends ParserRuleContext {
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public TerminalNode ID() { return getToken(USLParser.ID, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode ASYNC() { return getToken(USLParser.ASYNC, 0); }
		public TerminalNode SYNC() { return getToken(USLParser.SYNC, 0); }
		public FunctionDeclarationWithAtrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclarationWithAtr; }
	}

	public final FunctionDeclarationWithAtrContext functionDeclarationWithAtr() throws RecognitionException {
		FunctionDeclarationWithAtrContext _localctx = new FunctionDeclarationWithAtrContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_functionDeclarationWithAtr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			attribute();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASYNC || _la==SYNC) {
				{
				setState(122);
				_la = _input.LA(1);
				if ( !(_la==ASYNC || _la==SYNC) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(125);
			typeSpecifier();
			setState(126);
			match(ID);
			setState(127);
			match(T__0);
			setState(128);
			parameterList();
			setState(129);
			match(T__1);
			setState(130);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclarationContext extends ParserRuleContext {
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public TerminalNode ID() { return getToken(USLParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(USLParser.SEMI, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public TerminalNode ASSIGN() { return getToken(USLParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_varDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LA) {
				{
				{
				setState(132);
				attribute();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138);
			typeSpecifier();
			setState(139);
			match(ID);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(140);
				match(ASSIGN);
				setState(141);
				expression(0);
				}
			}

			setState(144);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclarationWithAtrContext extends ParserRuleContext {
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public TerminalNode ID() { return getToken(USLParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(USLParser.SEMI, 0); }
		public TerminalNode ASSIGN() { return getToken(USLParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VarDeclarationWithAtrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclarationWithAtr; }
	}

	public final VarDeclarationWithAtrContext varDeclarationWithAtr() throws RecognitionException {
		VarDeclarationWithAtrContext _localctx = new VarDeclarationWithAtrContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_varDeclarationWithAtr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			attribute();
			setState(147);
			typeSpecifier();
			setState(148);
			match(ID);
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(149);
				match(ASSIGN);
				setState(150);
				expression(0);
				}
			}

			setState(153);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MemberAccesContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(USLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(USLParser.ID, i);
		}
		public TerminalNode DOT() { return getToken(USLParser.DOT, 0); }
		public TerminalNode DEREF() { return getToken(USLParser.DEREF, 0); }
		public MemberAccesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_memberAcces; }
	}

	public final MemberAccesContext memberAcces() throws RecognitionException {
		MemberAccesContext _localctx = new MemberAccesContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_memberAcces);
		try {
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				match(ID);
				setState(156);
				match(DOT);
				setState(157);
				match(ID);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(158);
				match(ID);
				setState(159);
				match(DEREF);
				setState(160);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
